CompEditor: Hide known read only groups for new events
When creating a new event/task/memo, the CompEditor offers a list of destinations(sources) to store it. This list can include read-only and writeable destinations. Selecting a read-only destination (by accident) immediately shows error message.
It would be better, if at first place the read-only destinations are not shown as option.
Edited by Milan Crha