I#1109 - CompEditor: Hide known read only groups for new events

Closes https://gitlab.gnome.org/GNOME/evolution/-/issues/1109